--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,16 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Set deep sleep to 30 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Disable deprecated option  
+# CONFIG_BT_LL_SW_LLCP_LEGACY is not set
+
+# Make Bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Change board name
+CONFIG_ZMK_KEYBOARD_NAME="Corne View"
